Initial work on dropdown submenu

--- a/index.html
+++ b/index.html
@@ -43,18 +43,80 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="/"><img src="assets/img/logo_white_header.png" alt="Crux Crush"></a>
+						<a class="navbar-brand" href="#"><img src="assets/img/logo_white_header.png" alt="Crux Crush"></a>
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav navbar-right">
-							<li class="active"><a href="/">Home</a></li>
-							<li><a href="blog.html">Blog</a></li>
-							<li><a href="resources.html">Resources</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li class="active"><a href="#">Home</a></li>
+							<li>
+                <a role="button" data-toggle="collapse" href="#collapseBlog" aria-expanded="false" aria-controls="collapseBlog">
+                  Blog
+                </a>
+              </li>
+              <li>
+                <a role="button" data-toggle="collapse" href="#collapseResources" aria-expanded="false" aria-controls="collapseResources">
+                  Resources
+                </a>
+              </li>
+							<li><a href="#">Contact</a></li>
 						</ul>
 					</div>
 				</div>
-			</div>
+        <div class="collapse row submenu" id="collapseBlog">
+          <div class="col-md-2">
+            <ul class="submenu-subcategories">Blog Categories:
+              <li class="submenu-subcategory-option">subcategory</li>
+              <li class="submenu-subcategory-option">subcategory</li>
+              <li class="submenu-subcategory-option">subcategory</li>
+              <li class="submenu-subcategory-option">subcategory</li>
+            </ul>
+          </div>
+          <div class="col-md-10 related-articles-section">
+            <div class="col-md-2 submenu-recommend-header">
+              <h4>Crux Crush Recommends:</h4>
+            </div>
+            <div class="col-md-2 submenu-related-article first-related-article">
+              <p>related</p>
+            </div>
+            <div class="col-md-2 submenu-related-article">
+              <p>related</p>
+            </div>
+            <div class="col-md-2 submenu-related-article">
+              <p>related</p>
+            </div>
+            <div class="col-md-2 submenu-related-article">
+              <p>related</p>
+            </div>
+          </div>
+        </div>
+        <div class="collapse row submenu" id="collapseResources">
+          <div class="col-md-2">
+            <ul class="submenu-subcategories">Resources Categories:
+              <li class="submenu-subcategory-option">subcategory</li>
+              <li class="submenu-subcategory-option">subcategory</li>
+              <li class="submenu-subcategory-option">subcategory</li>
+              <li class="submenu-subcategory-option">subcategory</li>
+            </ul>
+          </div>
+          <div class="col-md-10 related-articles-section">
+            <div class="col-md-2 submenu-recommend-header">
+              <h4>Crux Crush Recommends:</h4>
+            </div>
+            <div class="col-md-2 submenu-related-article first-related-article">
+              <p>related</p>
+            </div>
+            <div class="col-md-2 submenu-related-article">
+              <p>related</p>
+            </div>
+            <div class="col-md-2 submenu-related-article">
+              <p>related</p>
+            </div>
+            <div class="col-md-2 submenu-related-article">
+              <p>related</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </header>
 
@@ -84,7 +146,7 @@
             		<span>$399</span>
             	</div>
             </div>
-            <p><a class="btn btn-lg btn-danger" href="/" role="button">Enroll now &raquo;</a></p>
+            <p><a class="btn btn-lg btn-danger" href="#" role="button">Enroll now &raquo;</a></p>
 	    		</div>
         </div>
       </div>
@@ -265,7 +327,7 @@
 				<div class="col-sm-8 col-md-6">
 					<div class="row">
 						<div class="col-lg-8">
-							<h2>Your Instructor <small>Brad Hussey</small></h2>
+              <h2>Your Instructor <small>Brad Hussey</small></h2>
 						</div><!-- end col -->
 						<div class="col-lg-4">
 							<a href="https://twitter.com/bradhussey" class="badge social twitter" target="_blank"><i class="fa fa-twitter"></i></a>
