--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <a class="navbar-brand" href="#"><img src="assets/img/logo_white_header.png" alt="Crux Crush"></a>
           </div>
           <div class="navbar-collapse collapse">
+            <!-- desktop menu -->
             <ul class="nav navbar-nav navbar-right non-mobile-menu">
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#">Contact</a></li>
@@ -64,6 +65,8 @@
                 </form>
               </li>
             </ul>
+            <!-- desktop menu -->
+            <!-- mobile menu -->
             <ul class="nav navbar-nav navbar-right mobile-menu" id="accordion0" role="tablist" aria-multiselectable="true">
               <li class="active"><a href="#">Home</a></li>
               <li class="panel panel-default">
@@ -178,9 +181,11 @@
                 </div>
               </div>
             </ul>
+            <!-- mobile menu -->
           </div>
         </div>
       </div>
+      <!-- desktop submenu -->
       <div class="panel-group non-mobile-menu" id="accordion">
         <div class="panel panel-default">
           <div id="collapseResources" class="panel-collapse collapse">
@@ -303,41 +308,100 @@
           </div>
         </div>
       </div>
+      <!-- desktop submenu -->
     </div>
   </header>
 
   <!-- hero -->
-  <section id="hero" data-type="background" data-speed="5">
-    <article>
-      <div class="container clearfix">
-        <div class="row">
-          <div class="col-sm-5">
-	    			<img src="assets/img/logo-badge.png" alt="Crux Crush" class="logo">
-  				</div>
-	    		<div class="col-sm-7 hero-text">
-		    		<h1>Bootstrap to WordPress</h1>
-            <p class="lead">Earn An Extra $1k - $5k a Month by Learning to Code Your Very Own Responsive &amp; Custom WordPress Websites with Bootstrap</p>
+  <div id="hero-carousel" class="carousel slide hero" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#hero-carousel" data-slide-to="0" class="active"></li>
+      <li data-target="#hero-carousel" data-slide-to="1"></li>
+      <li data-target="#hero-carousel" data-slide-to="2"></li>
+      <li data-target="#hero-carousel" data-slide-to="3"></li>
+      <li data-target="#hero-carousel" data-slide-to="4"></li>
+    </ol>
 
-            <div id="price-timeline">
-            	<div class="price active">
-            		<h4>Pre-Launch Price <small>Ends soon!</small></h4>
-            		<span>$149</span>
-            	</div>
-            	<div class="price">
-            		<h4>Launch Price <small>Coming soon!</small></h4>
-            		<span>$299</span>
-            	</div>
-            	<div class="price">
-            		<h4>Final Price <small>Coming soon!</small></h4>
-            		<span>$399</span>
-            	</div>
-            </div>
-            <p><a class="btn btn-lg btn-danger" href="#" role="button">Enroll now &raquo;</a></p>
-	    		</div>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <div class="hero-image-container">
+          <img src="assets/img/rifle.jpg" alt="rifle" class="hero-image">
+        </div>
+        <div class="article-info">
+          <div class="article-title">
+            5 QUICK TIPS TO UP YOUR PHOTO GAME AT THE CRAG
+          </div>
+          <div class="article-metadata">
+            By Sarah | Dec 23, 2016 | 203 views | 78 comments
+          </div>
         </div>
       </div>
-    </article>
-  </section>
+      <div class="item">
+        <div class="hero-image-container">
+          <img src="assets/img/libby.jpg" alt="libby" class="hero-image">
+        </div>
+        <div class="article-info">
+          <div class="article-title">
+            GIRL CRUSH OF THE MONTH: LIBBY PETER
+          </div>
+          <div class="article-metadata">
+            By Emily | Dec 01, 2016 | 203 views | 78 comments
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="hero-image-container">
+          <img src="assets/img/stretch.png" alt="stretch" class="hero-image">
+        </div>
+        <div class="article-info">
+          <div class="article-title">
+            DYNAMIC STRETCHING: FAD OR FACT?
+          </div>
+          <div class="article-metadata">
+            By Galina | Oct 10, 2016 | 203 views | 5 comments
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="hero-image-container">
+          <img src="assets/img/gift.jpg" alt="gifts" class="hero-image">
+        </div>
+        <div class="article-info">
+          <div class="article-title">
+            HOLIDAY GIFT GUIDE 2016
+          </div>
+          <div class="article-metadata">
+            By Galina | Nov 25, 2016 | 203 views | 5 comments
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="hero-image-container">
+          <img src="assets/img/xray.jpg" alt="xray" class="hero-image">
+        </div>
+        <div class="article-info">
+          <div class="article-title">
+            GIRL CRUSH OF THE MONTH: KYRA CONDIE
+          </div>
+          <div class="article-metadata">
+            By Galina | Oct 06, 2016 | 203 views | 5 comments
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Controls -->
+    <a class="left carousel-control" href="#hero-carousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#hero-carousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 
   <!--  opt-in section -->
   <section id="optin">
