Adds homepage content and styling

--- a/index.html
+++ b/index.html
@@ -58,10 +58,14 @@
               </li>
               <li>
                 <form class="navbar-form">
-                  <div class="form-group">
+                  <div class="form-group input-group">
                     <input type="text" class="form-control" placeholder="Search">
+                    <span class="input-group-btn">
+                      <button class="btn btn-default" type="button">
+                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                      </button>
+                    </span>
                   </div>
-                  <button type="submit" class="btn btn-sm btn-default">Search</button>
                 </form>
               </li>
             </ul>
@@ -391,7 +395,6 @@
         </div>
       </div>
     </div>
-
     <!-- Controls -->
     <a class="left carousel-control" href="#hero-carousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -406,46 +409,155 @@
   <!--  opt-in section -->
   <section id="optin">
     <div class="container">
-			<div class="row">
-
-				<div class="col-sm-8">
-					<p class="lead"><strong>Subscribe to our mailing list.</strong> We'll send something special as a thank you.</p>
-				</div><!-- end col -->
-
-				<div class="col-sm-4">
-					<button class="btn btn-success btn-lg btn-block" data-toggle="modal" data-target="#myModal">
-						Click here to subscribe
-					</button>
-				</div><!-- end col -->
-
-			</div><!-- row -->
-		</div><!-- container -->
+      <div class="row">
+        <div class="col-sm-9">
+          <p class="lead"><strong>Subscribe to our mailing list </strong> and we'll keep you posted when there's a new article.</p>
+        </div>
+				<div class="col-sm-3">
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-success btn-lg btn-block" data-toggle="modal" data-target="#myModal">
+            Subscribe
+          </button>
+				</div>
+			</div>
+		</div>
   </section>
+  <!--  opt-in section -->
 
-  <!--  boost your income section -->
-  <section id="boost-income">
-		<div class="container">
-
-			<div class="section-header">
-				<img src="assets/img/icon-boost.png" alt="Chart">
-				<h2>How You Can Boost Your Income</h2>
-			</div><!-- section-header -->
-
-			<p class="lead">Whether you&rsquo;re a freelance designer, entrepreneur, employee for a company, code hobbyist, or looking for a new career &mdash; this course gives you an immensely valuable skill that will enable you to either:</p>
-			<div class="row">
-				<div class="col-sm-6">
-					<h3>Make money on the side</h3>
-					<p>So you can save up for that Hawaiian vacation you&rsquo;ve been wanting, help pay off your debt, your car, your mortgage, or simply just to have bonus cash laying around.</p>
-				</div><!-- end col -->
-
-				<div class="col-sm-6">
-					<h3>Create a full-time income</h3>
-					<p>WordPress developers have options. Many developers make a generous living off of creating custom WordPress themes and selling them on websites like ThemeForest. Freelance designers and developers can also take on WordPress projects and make an extra $1,000 - $5,000+ per month.</p>
-				</div><!-- end col -->
-			</div><!-- row -->
-
-		</div><!-- container -->
-	</section><!-- boost-income -->
+  <!--  homepage content section -->
+  <section id="homepage-content">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 col-xs-12">
+          <div>
+            <h1>What's Popular: </h1>
+          </div>
+          <div class="article-preview">
+            <div class="row">
+              <div class="col-sm-4 col-xs-12">
+                <img src="assets/img/ashima.jpg" class="article-preview-thumbnail" />
+              </div>
+              <div class="col-sm-8 col-xs-12 article-preview-content">
+                <div class="article-preview-title">
+                  Article Title Goes Here
+                </div>
+                <div class="article-preview-description">
+                  Super brief description or teaser text will go here or teaser text will
+                  go here Super brief description or teaser text will go here Super brief
+                  description or teaser text will go here
+                </div>
+                <div class="article-preview-metadata">
+                  By Author Name | Date | 293 views | 3 comments
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="article-preview">
+            <div class="row">
+              <div class="col-sm-4 col-xs-12">
+                <img src="assets/img/climb.png" class="article-preview-thumbnail" />
+              </div>
+              <div class="col-sm-8 col-xs-12 article-preview-content">
+                <div class="article-preview-title">
+                  Article Title Goes Here
+                </div>
+                <div class="article-preview-description">
+                  Super brief description or teaser text will go here or teaser text will
+                  go here Super brief description or teaser text will go here Super brief
+                  description or teaser text will go here
+                </div>
+                <div class="article-preview-metadata">
+                  By Author Name | Date | 293 views | 3 comments
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="article-preview">
+            <div class="row">
+              <div class="col-sm-4 col-xs-12">
+                <img src="assets/img/climb.png" class="article-preview-thumbnail" />
+              </div>
+              <div class="col-sm-8 col-xs-12 article-preview-content">
+                <div class="article-preview-title">
+                  Article Title Goes Here
+                </div>
+                <div class="article-preview-description">
+                  Super brief description or teaser text will go here or teaser text will
+                  go here Super brief description or teaser text will go here Super brief
+                  description or teaser text will go here
+                </div>
+                <div class="article-preview-metadata">
+                  By Author Name | Date | 293 views | 3 comments
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="article-preview">
+            <div class="row">
+              <div class="col-sm-4 col-xs-12">
+                <img src="assets/img/climb.png" class="article-preview-thumbnail" />
+              </div>
+              <div class="col-sm-8 col-xs-12 article-preview-content">
+                <div class="article-preview-title">
+                  Article Title Goes Here
+                </div>
+                <div class="article-preview-description">
+                  Super brief description or teaser text will go here or teaser text will
+                  go here Super brief description or teaser text will go here Super brief
+                  description or teaser text will go here
+                </div>
+                <div class="article-preview-metadata">
+                  By Author Name | Date | 293 views | 3 comments
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="article-preview">
+            <div class="row">
+              <div class="col-sm-4 col-xs-12">
+                <img src="assets/img/climb.png" class="article-preview-thumbnail" />
+              </div>
+              <div class="col-sm-8 col-xs-12 article-preview-content">
+                <div class="article-preview-title">
+                  Article Title Goes Here
+                </div>
+                <div class="article-preview-description">
+                  Super brief description or teaser text will go here or teaser text will
+                  go here Super brief description or teaser text will go here Super brief
+                  description or teaser text will go here
+                </div>
+                <div class="article-preview-metadata">
+                  By Author Name | Date | 293 views | 3 comments
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3 col-xs-12 ads-sidebar">
+          <p class="small">Sign up for the newsletter:</p>
+          <div class="input-group input-group-sm">
+            <input type="text" class="form-control" placeholder="climber@example.com">
+            <span class="input-group-btn">
+              <button class="btn btn-default" type="button">
+                <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+              </button>
+            </span>
+          </div>
+          <div class="ad-160x160">
+            160 x 160
+          </div>
+          <div class="ad-160x600">
+            160 x 600
+          </div>
+        </div>
+      </div>
+		</div>
+	</section>
+  <!--  homepage content section -->
 
   <!--  who benefits section -->
   <section id="who-benefits">
@@ -637,7 +749,7 @@
 	</section><!-- kudos -->
 
   <!--  footer section -->
-  <footer>
+  <footer class="site-footer">
     <div class="container">
       <div class="row">
         <div class="col-md-4 col-sm-12 col-xs-12 footer-logo">
@@ -691,6 +803,31 @@
       </div>
     </div><!-- container -->
   </footer>
+
+  <!--  footer section -->
+  <footer class="navbar-fixed-bottom bottom-ad">
+    <div class="ad-320x50">
+      fixed ad
+    </div>
+  </footer>
+
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- bootstrap core js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
