--- a/post.html
+++ b/post.html
@@ -693,7 +693,7 @@
               <hr />
               <div class="pull-right dev-credit">
                 <h5>Site development by:</h5>
-                <a href="https://andrewpalmer.co" target="_blank">
+                <a href="http://andrewpalmer.co" target="_blank">
                   <img src="assets/img/ap_logo.png" alt="developer-logo" class="dev-logo" />
                 </a>
               </div>
